Implemented auth/register endpoint
